# MAI-TFM_RL_Qubit_Allocation

./: .gitattributes  .gitignore  .gitmodules  README.md  requirements.txt
circuits/: cuccaro_adder_100.qasm  cuccaro_adder_50.qasm  deutsch_jozsa_100.qasm  deutsch_jozsa_50.qasm  drapper_adder_100.qasm  drapper_adder_50.qasm  gen_script.py  graph_state_100.qasm  graph_state_50.qasm  qft_100.qasm  qft_50.qasm  qnn_100.qasm  qnn_50.qasm  quantum_volume_100.qasm  quantum_volume_50.qasm
data/: my_cost_100.csv  my_cost_100_.csv  my_cost_50.csv  my_cost_50_.csv  my_time_100.csv  my_time_100_.csv  my_time_50.csv  my_time_50_.csv  my_time_50_old.csv  russo_alloc_results_100.json  russo_alloc_results_50.json  sota_cost_100.csv  sota_cost_50.csv  sota_results_100.csv  sota_results_50.csv  sota_results_50_unbalanced.csv  sota_time_100.csv  sota_time_50.csv
docs/qalloczero/: README.md
docs/report/: bibliography.bib  main.tex  setup.tex
docs/report/text/: 0_summary.tex  1_intro.tex  2_problem.tex  3_sota.tex  4_solution.tex  5_results.tex  6_conclusions.tex  _abstract.tex
src/: circuit_analisys.ipynb  debug_azero.py  main.py  main_qalloczero.py  main_sota.py  main_utils.py  other_figures.ipynb  results.ipynb
src/parco/env/: env.py  generator.py  render.py  tests.py
src/parco/env_embeddings/: communication.py  core_embds.py  qa.py  qubit_embds.py  slice_embds.py
src/parco/models/: encoder.py
src/parco/models/nn/: positional_encoder.py  transformer.py
src/qalloczero/alg/: alphazero.py  directalloc.py  mcts.py  ts.py  ts_cpp.py  ts_python.py
src/qalloczero/alg/ts_cpp_engine/: CMakeLists.txt
src/qalloczero/alg/ts_cpp_engine/src/: inference_server.cpp  inference_server.hpp  tree_search.cpp  tree_search.h  tree_search.hpp  ts_engine.cpp
src/qalloczero/models/: context_embedding.py  decoder.py  enccircuit.py  encoder.py  inferenceserver.py  predmodel.py
src/qalloczero/scripts/: gen_circuit_json.py  parameter_finetune.py  test_alphazero.py  test_compare.py  test_directalloc.py
src/russo/tests/: hungarian.py
src/sampler/: circuitsampler.py  hardwaresampler.py  mixedcircuitsampler.py  randomcircuit.py  realcircuitsampler.py  structrandomcirc.py
src/utils/: allocutils.py  customtypes.py  environment.py  gradient_tools.py  mapping.py  memory.py  other_utils.py  plotter.py
(+3 files in other folders)
